LOYALIST-57 Navbar style overrides, BS5 wrap offset fix

--- a/custom/themes/the_loyalist_collection/scss/overrides/_navbar.scss
+++ b/custom/themes/the_loyalist_collection/scss/overrides/_navbar.scss
@@ -12,18 +12,14 @@
   .site-logo {
     margin-right: 0.75rem;
   }
-  .site-title {
+
+  a.site-title {
     color: var(--bs-black);
     font-size: 2rem;
     line-height: 1;
     // Offset BS5 nav.branding boundary space characters re: wrap.
     margin-left: -0.25rem;
     padding: 0.25rem;
-
-    &:focus,
-    &:hover {
-      opacity: 0.75;
-    }
   }
   @media (min-width: 992px) {
     .site-logo {
@@ -35,19 +31,29 @@
   }
 }
 
+.navbar {
+  a {
+    outline-offset: 1px;
+    padding: 0.25rem;
+    text-decoration: transparent $text-decoration-style!important;
+
+    &:not(.active):hover {
+      text-decoration: $link-text-dark $text-decoration-style!important;
+    }
+
+    &:focus-visible {
+      @include focus_outline($link-text-dark);
+    }
+  }
+}
 .nav-main-menu {
   flex: 0 0 auto;
   max-width: 41.67%;
 
   a {
-    &:hover {
-        outline: 0;
-        box-shadow: 0 0 0 0.25rem rgba(13,110,253,.25);
-    }
-    &.active {
-      text-decoration: underline;
-      text-decoration-color: rgba(0, 0, 0, 0.3);
-      text-underline-offset: 0.25rem;
+    &.active:hover {
+      cursor: default;
+      text-decoration: transparent $text-decoration-style;
     }
   }
 }
